--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include README.rst
 recursive-include geodb/initialdata *
 recursive-include geodb/locale *
 recursive-include geodb/templates *
+recursive-include geodb/migrations *
